src/objects/Banquero__c.object
<CustomObject>
    <fields>
        <fullName>MX_SB_BCT_Banquero__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Banquero Id Salesforce</description>
        <inlineHelpText>Id del Banquero</inlineHelpText>
        <label>Banquero</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UsuariosBanquero</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_BCT_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cliente Id Salesforce</description>
        <inlineHelpText>Id del Cliente</inlineHelpText>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CuentaBanqueroContigo</relationshipLabel>
        <relationshipName>Cuenta_Id</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_BCT_Id_Banquero__c</fullName>
        <description>Identificador del Banquero</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Id Banquero</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_BCT_Id_Cliente__c</fullName>
        <description>Identificador del Cliente</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Id Cliente</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_BCT_Suspendido__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica el estatus del Banquero. En caso de estar seleccionado se entiende que el Banquero esta suspendido</description>
        <label>Suspendido</label>
        <type>Checkbox</type>
    </fields>
    <label>Banquero</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Vista_Banquero</fullName>
        <columns>NAME</columns>
        <columns>MX_SB_BCT_Suspendido__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>Vista Banquero</label>
        <sharedTo>
            <role>Carga_Base_Banquero</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BCT-{0000}</displayFormat>
        <label>Identificador del banquero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Banqueros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>